// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-quantity-select renders 1`] = `
<ce-quantity-select quantity="1">
  <mock:shadow-root>
    <ce-dropdown class="quantity" style="--panel-height: 150px;">
      <div class="quantity--trigger" slot="trigger">
        <slot name="prefix">
          Qty
        </slot>
        <strong>
          1
        </strong>
        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" style="width: 10px; height: 10px;">
          <polyline points="6 9 12 15 18 9"></polyline>
        </svg>
      </div>
      <ce-menu>
        <ce-menu-item>
          1
        </ce-menu-item>
        <ce-menu-item>
          2
        </ce-menu-item>
        <ce-menu-item>
          3
        </ce-menu-item>
        <ce-menu-item>
          4
        </ce-menu-item>
        <ce-menu-item>
          5
        </ce-menu-item>
        <ce-menu-item>
          6
        </ce-menu-item>
        <ce-menu-item>
          7
        </ce-menu-item>
        <ce-menu-item>
          8
        </ce-menu-item>
        <ce-menu-item>
          9
        </ce-menu-item>
        <ce-menu-item>
          10
        </ce-menu-item>
        <ce-menu-item>
          11
        </ce-menu-item>
        <ce-menu-item>
          12
        </ce-menu-item>
        <ce-menu-item>
          13
        </ce-menu-item>
        <ce-menu-item>
          14
        </ce-menu-item>
        <ce-menu-item>
          15
        </ce-menu-item>
        <ce-menu-item>
          16
        </ce-menu-item>
        <ce-menu-item>
          17
        </ce-menu-item>
        <ce-menu-item>
          18
        </ce-menu-item>
        <ce-menu-item>
          19
        </ce-menu-item>
        <ce-menu-item>
          20
        </ce-menu-item>
        <ce-menu-item>
          21
        </ce-menu-item>
        <ce-menu-item>
          22
        </ce-menu-item>
        <ce-menu-item>
          23
        </ce-menu-item>
        <ce-menu-item>
          24
        </ce-menu-item>
        <ce-menu-item>
          25
        </ce-menu-item>
        <ce-menu-item>
          26
        </ce-menu-item>
        <ce-menu-item>
          27
        </ce-menu-item>
        <ce-menu-item>
          28
        </ce-menu-item>
        <ce-menu-item>
          29
        </ce-menu-item>
        <ce-menu-item>
          30
        </ce-menu-item>
        <ce-menu-item>
          31
        </ce-menu-item>
        <ce-menu-item>
          32
        </ce-menu-item>
        <ce-menu-item>
          33
        </ce-menu-item>
        <ce-menu-item>
          34
        </ce-menu-item>
        <ce-menu-item>
          35
        </ce-menu-item>
        <ce-menu-item>
          36
        </ce-menu-item>
        <ce-menu-item>
          37
        </ce-menu-item>
        <ce-menu-item>
          38
        </ce-menu-item>
        <ce-menu-item>
          39
        </ce-menu-item>
        <ce-menu-item>
          40
        </ce-menu-item>
        <ce-menu-item>
          41
        </ce-menu-item>
        <ce-menu-item>
          42
        </ce-menu-item>
        <ce-menu-item>
          43
        </ce-menu-item>
        <ce-menu-item>
          44
        </ce-menu-item>
        <ce-menu-item>
          45
        </ce-menu-item>
        <ce-menu-item>
          46
        </ce-menu-item>
        <ce-menu-item>
          47
        </ce-menu-item>
        <ce-menu-item>
          48
        </ce-menu-item>
        <ce-menu-item>
          49
        </ce-menu-item>
        <ce-menu-item>
          50
        </ce-menu-item>
        <ce-menu-item>
          51
        </ce-menu-item>
        <ce-menu-item>
          52
        </ce-menu-item>
        <ce-menu-item>
          53
        </ce-menu-item>
        <ce-menu-item>
          54
        </ce-menu-item>
        <ce-menu-item>
          55
        </ce-menu-item>
        <ce-menu-item>
          56
        </ce-menu-item>
        <ce-menu-item>
          57
        </ce-menu-item>
        <ce-menu-item>
          58
        </ce-menu-item>
        <ce-menu-item>
          59
        </ce-menu-item>
        <ce-menu-item>
          60
        </ce-menu-item>
        <ce-menu-item>
          61
        </ce-menu-item>
        <ce-menu-item>
          62
        </ce-menu-item>
        <ce-menu-item>
          63
        </ce-menu-item>
        <ce-menu-item>
          64
        </ce-menu-item>
        <ce-menu-item>
          65
        </ce-menu-item>
        <ce-menu-item>
          66
        </ce-menu-item>
        <ce-menu-item>
          67
        </ce-menu-item>
        <ce-menu-item>
          68
        </ce-menu-item>
        <ce-menu-item>
          69
        </ce-menu-item>
        <ce-menu-item>
          70
        </ce-menu-item>
        <ce-menu-item>
          71
        </ce-menu-item>
        <ce-menu-item>
          72
        </ce-menu-item>
        <ce-menu-item>
          73
        </ce-menu-item>
        <ce-menu-item>
          74
        </ce-menu-item>
        <ce-menu-item>
          75
        </ce-menu-item>
        <ce-menu-item>
          76
        </ce-menu-item>
        <ce-menu-item>
          77
        </ce-menu-item>
        <ce-menu-item>
          78
        </ce-menu-item>
        <ce-menu-item>
          79
        </ce-menu-item>
        <ce-menu-item>
          80
        </ce-menu-item>
        <ce-menu-item>
          81
        </ce-menu-item>
        <ce-menu-item>
          82
        </ce-menu-item>
        <ce-menu-item>
          83
        </ce-menu-item>
        <ce-menu-item>
          84
        </ce-menu-item>
        <ce-menu-item>
          85
        </ce-menu-item>
        <ce-menu-item>
          86
        </ce-menu-item>
        <ce-menu-item>
          87
        </ce-menu-item>
        <ce-menu-item>
          88
        </ce-menu-item>
        <ce-menu-item>
          89
        </ce-menu-item>
        <ce-menu-item>
          90
        </ce-menu-item>
        <ce-menu-item>
          91
        </ce-menu-item>
        <ce-menu-item>
          92
        </ce-menu-item>
        <ce-menu-item>
          93
        </ce-menu-item>
        <ce-menu-item>
          94
        </ce-menu-item>
        <ce-menu-item>
          95
        </ce-menu-item>
        <ce-menu-item>
          96
        </ce-menu-item>
        <ce-menu-item>
          97
        </ce-menu-item>
        <ce-menu-item>
          98
        </ce-menu-item>
        <ce-menu-item>
          99
        </ce-menu-item>
        <ce-menu-item>
          100
        </ce-menu-item>
      </ce-menu>
    </ce-dropdown>
  </mock:shadow-root>
</ce-quantity-select>
`;

exports[`sc-quantity-select renders 1`] = `
<sc-quantity-select quantity="1">
  <mock:shadow-root>
    <sc-dropdown class="quantity" style="--panel-height: 150px;">
      <div class="quantity--trigger" slot="trigger">
        <slot name="prefix">
          Qty
        </slot>
        <strong>
          1
        </strong>
        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" style="width: 10px; height: 10px;">
          <polyline points="6 9 12 15 18 9"></polyline>
        </svg>
      </div>
      <sc-menu>
        <sc-menu-item>
          1
        </sc-menu-item>
        <sc-menu-item>
          2
        </sc-menu-item>
        <sc-menu-item>
          3
        </sc-menu-item>
        <sc-menu-item>
          4
        </sc-menu-item>
        <sc-menu-item>
          5
        </sc-menu-item>
        <sc-menu-item>
          6
        </sc-menu-item>
        <sc-menu-item>
          7
        </sc-menu-item>
        <sc-menu-item>
          8
        </sc-menu-item>
        <sc-menu-item>
          9
        </sc-menu-item>
        <sc-menu-item>
          10
        </sc-menu-item>
        <sc-menu-item>
          11
        </sc-menu-item>
        <sc-menu-item>
          12
        </sc-menu-item>
        <sc-menu-item>
          13
        </sc-menu-item>
        <sc-menu-item>
          14
        </sc-menu-item>
        <sc-menu-item>
          15
        </sc-menu-item>
        <sc-menu-item>
          16
        </sc-menu-item>
        <sc-menu-item>
          17
        </sc-menu-item>
        <sc-menu-item>
          18
        </sc-menu-item>
        <sc-menu-item>
          19
        </sc-menu-item>
        <sc-menu-item>
          20
        </sc-menu-item>
        <sc-menu-item>
          21
        </sc-menu-item>
        <sc-menu-item>
          22
        </sc-menu-item>
        <sc-menu-item>
          23
        </sc-menu-item>
        <sc-menu-item>
          24
        </sc-menu-item>
        <sc-menu-item>
          25
        </sc-menu-item>
        <sc-menu-item>
          26
        </sc-menu-item>
        <sc-menu-item>
          27
        </sc-menu-item>
        <sc-menu-item>
          28
        </sc-menu-item>
        <sc-menu-item>
          29
        </sc-menu-item>
        <sc-menu-item>
          30
        </sc-menu-item>
        <sc-menu-item>
          31
        </sc-menu-item>
        <sc-menu-item>
          32
        </sc-menu-item>
        <sc-menu-item>
          33
        </sc-menu-item>
        <sc-menu-item>
          34
        </sc-menu-item>
        <sc-menu-item>
          35
        </sc-menu-item>
        <sc-menu-item>
          36
        </sc-menu-item>
        <sc-menu-item>
          37
        </sc-menu-item>
        <sc-menu-item>
          38
        </sc-menu-item>
        <sc-menu-item>
          39
        </sc-menu-item>
        <sc-menu-item>
          40
        </sc-menu-item>
        <sc-menu-item>
          41
        </sc-menu-item>
        <sc-menu-item>
          42
        </sc-menu-item>
        <sc-menu-item>
          43
        </sc-menu-item>
        <sc-menu-item>
          44
        </sc-menu-item>
        <sc-menu-item>
          45
        </sc-menu-item>
        <sc-menu-item>
          46
        </sc-menu-item>
        <sc-menu-item>
          47
        </sc-menu-item>
        <sc-menu-item>
          48
        </sc-menu-item>
        <sc-menu-item>
          49
        </sc-menu-item>
        <sc-menu-item>
          50
        </sc-menu-item>
        <sc-menu-item>
          51
        </sc-menu-item>
        <sc-menu-item>
          52
        </sc-menu-item>
        <sc-menu-item>
          53
        </sc-menu-item>
        <sc-menu-item>
          54
        </sc-menu-item>
        <sc-menu-item>
          55
        </sc-menu-item>
        <sc-menu-item>
          56
        </sc-menu-item>
        <sc-menu-item>
          57
        </sc-menu-item>
        <sc-menu-item>
          58
        </sc-menu-item>
        <sc-menu-item>
          59
        </sc-menu-item>
        <sc-menu-item>
          60
        </sc-menu-item>
        <sc-menu-item>
          61
        </sc-menu-item>
        <sc-menu-item>
          62
        </sc-menu-item>
        <sc-menu-item>
          63
        </sc-menu-item>
        <sc-menu-item>
          64
        </sc-menu-item>
        <sc-menu-item>
          65
        </sc-menu-item>
        <sc-menu-item>
          66
        </sc-menu-item>
        <sc-menu-item>
          67
        </sc-menu-item>
        <sc-menu-item>
          68
        </sc-menu-item>
        <sc-menu-item>
          69
        </sc-menu-item>
        <sc-menu-item>
          70
        </sc-menu-item>
        <sc-menu-item>
          71
        </sc-menu-item>
        <sc-menu-item>
          72
        </sc-menu-item>
        <sc-menu-item>
          73
        </sc-menu-item>
        <sc-menu-item>
          74
        </sc-menu-item>
        <sc-menu-item>
          75
        </sc-menu-item>
        <sc-menu-item>
          76
        </sc-menu-item>
        <sc-menu-item>
          77
        </sc-menu-item>
        <sc-menu-item>
          78
        </sc-menu-item>
        <sc-menu-item>
          79
        </sc-menu-item>
        <sc-menu-item>
          80
        </sc-menu-item>
        <sc-menu-item>
          81
        </sc-menu-item>
        <sc-menu-item>
          82
        </sc-menu-item>
        <sc-menu-item>
          83
        </sc-menu-item>
        <sc-menu-item>
          84
        </sc-menu-item>
        <sc-menu-item>
          85
        </sc-menu-item>
        <sc-menu-item>
          86
        </sc-menu-item>
        <sc-menu-item>
          87
        </sc-menu-item>
        <sc-menu-item>
          88
        </sc-menu-item>
        <sc-menu-item>
          89
        </sc-menu-item>
        <sc-menu-item>
          90
        </sc-menu-item>
        <sc-menu-item>
          91
        </sc-menu-item>
        <sc-menu-item>
          92
        </sc-menu-item>
        <sc-menu-item>
          93
        </sc-menu-item>
        <sc-menu-item>
          94
        </sc-menu-item>
        <sc-menu-item>
          95
        </sc-menu-item>
        <sc-menu-item>
          96
        </sc-menu-item>
        <sc-menu-item>
          97
        </sc-menu-item>
        <sc-menu-item>
          98
        </sc-menu-item>
        <sc-menu-item>
          99
        </sc-menu-item>
        <sc-menu-item>
          100
        </sc-menu-item>
      </sc-menu>
    </sc-dropdown>
  </mock:shadow-root>
</sc-quantity-select>
`;
